// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`router configurationOperations can create revision 1`] = `
{
  "latest": {
    "configuration": {},
    "created": Any<Date>,
    "revision": 1,
  },
  "name": "test-service",
  "namespace": "platform",
  "urn": "urn:ads:platform:configuration-service:v2:/configuration/platform/test-service",
}
`;

exports[`router configurationOperations can set the active revision 1`] = `
{
  "active": 2,
  "name": "test-service",
  "namespace": "platform",
}
`;

exports[`router getActiveRevision can fallback to latest for active revision not found 1`] = `
{
  "data": {
    "a": 42,
  },
  "name": "test-service",
  "namespace": "platform",
  "revision": 12,
}
`;

exports[`router getActiveRevision can fallback to latest for no active revision 1`] = `
{
  "data": {
    "a": 42,
  },
  "name": "test-service",
  "namespace": "platform",
  "revision": 12,
}
`;

exports[`router getActiveRevision can get active revision 1`] = `
{
  "data": {
    "a": 42,
  },
  "name": "test-service",
  "namespace": "platform",
  "revision": 3,
}
`;

exports[`router getActiveRevision can get active revision at revision 0 1`] = `
{
  "data": {
    "a": 42,
  },
  "name": "test-service",
  "namespace": "platform",
  "revision": 3,
}
`;

exports[`router getActiveRevision can get active revision with no user context 1`] = `
{
  "data": {
    "a": 42,
  },
  "name": "test-service",
  "namespace": "platform",
  "revision": 3,
}
`;

exports[`router getRevisions can get revisions 1`] = `{}`;

exports[`router getServiceConfiguration can get configuration 1`] = `
{
  "latest": null,
  "name": "test-service",
  "namespace": "platform",
  "urn": "urn:ads:platform:configuration-service:v2:/configuration/platform/test-service",
}
`;

exports[`router patchServiceConfigurationRevision can delete 1`] = `
{
  "latest": {
    "configuration": {
      "old": "old",
    },
    "lastUpdated": Any<Date>,
    "revision": 1,
  },
  "name": "test-service",
  "namespace": "platform",
  "urn": "urn:ads:platform:configuration-service:v2:/configuration/platform/test-service",
}
`;

exports[`router patchServiceConfigurationRevision can delete at path 1`] = `
{
  "latest": {
    "configuration": {
      "old": {
        "nested": "old",
      },
    },
    "lastUpdated": Any<Date>,
    "revision": 1,
  },
  "name": "test-service",
  "namespace": "platform",
  "urn": "urn:ads:platform:configuration-service:v2:/configuration/platform/test-service",
}
`;

exports[`router patchServiceConfigurationRevision can replace 1`] = `
{
  "latest": {
    "configuration": {
      "old": "old",
    },
    "lastUpdated": Any<Date>,
    "revision": 1,
  },
  "name": "test-service",
  "namespace": "platform",
  "urn": "urn:ads:platform:configuration-service:v2:/configuration/platform/test-service",
}
`;

exports[`router patchServiceConfigurationRevision can update 1`] = `
{
  "latest": {
    "configuration": {
      "old": "old",
    },
    "lastUpdated": Any<Date>,
    "revision": 1,
  },
  "name": "test-service",
  "namespace": "platform",
  "urn": "urn:ads:platform:configuration-service:v2:/configuration/platform/test-service",
}
`;
